=======
CHANGES
=======


2.0.6 (Unreleased)
------------------

- Fixed discriminator for z3ext:pagelet directive


2.0.5 (2009-01-26)
------------------

- Update styles


2.0.4 (2009-01-22)
------------------

- Pass permission to class required attributes


2.0.3 (2009-01-20)
------------------

- Use __parent__ for layout quering


2.0.2 (2009-01-08)
------------------

- Register layout for (view, for, layer), instead of view and for separatly


2.0.1 (2008-12-25)
------------------

- Pagelet should implement provided interfaces


2.0.0 (2008-12-22)
------------------

- Pagelet without name is not allowed

- Added 'type' attribute to 'z3ext:pagelet'

- Added 'z3ext:pageletType' directive for registering new pagelet types

- multiple params is allowed for 'for' attribute

- Removed pagelet 'manager' attribute

- 'pagelet' tales expression and 'pagelet' view checks additional context IPageletContext
  if exists use it as adapter parameter


1.7.3 (2008-12-18)
------------------

- Use IPagelet instead of IPageTemplate for pagelet rendering


1.7.2 (2008-12-17)
------------------

- Update default styles


1.7.1 (2008-12-15)
------------------

- Check if context provides interface in @@pagelet view and pagelet: tales expresion


1.7.0 (2008-12-11)
------------------

- Added `manager` attribute to z3ext:pagelet directive
  this allow use getMultiAdapter((content, request, manager1, manager2, ...), IPagelet)

- Use 'provides' schema for converting kwargs in z3ext:pagelet directive


1.6.0 (2008-11-27)
------------------

- Added 'uid' attribute to z3ext:layout directive.
  Send ILayoutCreatedEvent event only if layout has uid


1.5.9 (2008-11-24)
------------------

- Fixed python2.4 compatibility


1.5.7 (2008-11-17)
------------------

- Update css styles


1.5.6 (2008-11-06)
------------------

- Register nameless pagelet only if provided interface is not
inherited from IBrowserPublisher


1.5.5 (2008-11-05)
------------------
